Added config gui; Added a commands:     - /way clear     - /way edit         Allows you to move the gps arrow. Added animations for when you are above or below your destination.

--- a/build.gradle
+++ b/build.gradle
@@ -83,17 +83,17 @@ processResources
         }
 
 // Add Access Transformers Manifest
-jar {
-    manifest {
-        attributes 'FMLAT': 'Graves_at.cfg'
-    }
-}
+//jar {
+//    manifest {
+//        attributes 'FMLAT': 'TomTom_at.cfg'
+//    }
+//}
 
 curseforge {
     apiKey = curseApiKey
     project {
         releaseType = curseReleaseType
-        id = "242176"
+        id = "240877"
         changelog = file("build/libs/changelog.txt")
         addGameVersion minecraft_version
         addArtifact devJar
