--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-minecraft_version=1.8.9
-forge_version=11.15.1.1722
+minecraft_version=1.9
+forge_version=12.16.0.1770
+mcp_mappings=snapshot_20160312
 cibuild=0
 cibasename=tomtom
