--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
         classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.0.7"
     }
 }
@@ -51,7 +51,7 @@ if (hasProperty("teamcity")) {
 }
 
 minecraft {
-    version = minecraft_version + "-" + forge_version + "-" + minecraft_version
+    version = minecraft_version + "-" + forge_version
 
     replaceIn "ModInfo.java"
 
