--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-minecraft_version=1.9
-forge_version=12.16.0.1809
-mcp_mappings=snapshot_20160312
+minecraft_version=1.10
+forge_version=12.18.0.2000-1.10.0
+mcp_mappings=stable_26
 cibuild=0
-cibasename=tomtom
+cibasename=TomTom
