Fixed a bug where negative coordinates couldn't be used; Added config option to hide coordinates on the HUD; Added config options to change the colors of the HUD text;

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-minecraft_version=1.10
-forge_version=12.18.0.2000-1.10.0
+minecraft_version=1.10.2
+forge_version=12.18.1.2011
 mcp_mappings=stable_26
 cibuild=0
 cibasename=TomTom
