--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-minecraft_version=1.10.2
-forge_version=12.18.1.2011
-mcp_mappings=stable_26
+minecraft_version=1.11
+forge_version=13.19.1.2198
+mcp_mappings=snapshot_20161223
 cibuild=0
 cibasename=TomTom
